# nexus_correlation_discovery

./: .gitattributes  .gitignore  README.md  Sandra_use_case.md  chicago_open_data_factor_analysis.pkl  config.py  config.yaml  coordinate.py  index_builder.py  index_builder_db.py  io_utils.py  mydatetime.py  nexus_api.py  proportionNullByColAndState.py  pyproject.toml  quickstart.md  requirement.txt  requirements.txt  search.py  search_db.py  setup.cfg  setup.py  st_api.py  test.py
archived/: index_builder_db_archieved.py
data/: quickstart.db
data_ingestion/: connection.py  data_ingestor.py  data_profiler.py  database_connecter.py  db_ops.py  duckdb_connector.py  index_builder_agg.py  index_builder_db.py  index_builder_raw.py  postgres_connector.py  profile_datasets.py  profile_num_cols.py  table.py
data_prep/: get_data_source_profiles.py  label_data_source.py  prep_utils.py  profile_datasource.py  spatial_temeporal_labeller.py  st_tbl_collector.py  table_downloader.py
data_search/: data_model.py  data_polygamy.py  db_ops.py  search_corr.py  search_db.py
db_connector/: database_connecter.py  duckdb_connector.py  postgres_connector.py
demo/: asthma.ipynb  chatbot.py  cluster_utils.py  control_for_variables.ipynb  data_commons.ipynb  data_ingestion.ipynb  demo_ui.py  llm_corr_assistant.ipynb  nexus demo-sigmod.ipynb  nexus demo.ipynb  nexus sociome.ipynb  nexus_api.ipynb  nexus_demo.py  test.ipynb  voter_file.ipynb
evaluation/: case_study.py  causal_inference.py  compare_corrs.py  compare_graph.py  efficiency.py  efficiency_corr.py  efficiency_find_join.py  efficiency_full.py  efficiency_missing_val.py  efficiency_vectorization.py  get_coef.py  get_data_source_profiles.py  graph_opt.py  ground_truth.py  ingest_data.py  nexus_corr_sketch_runtime.py  persist_correlations.py  row_cnt.py  (+2 more)
(+191 files in other folders)
