[metadata]
name = nexus
version = 0.0.1
author = Yue Gong
author_email = yuegong@uchicago.edu
description = ''
long_description = file: README.md
long_description_content_type = text/markdown
url = ''
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = nexus